# retail-shopping-agent

./: .env.example  .gitignore  HANDOFF-CHAT-UI.md  PHASE-1-ROADMAP.md  README.md  SESSION-NOTES.md  config.example.yaml  config.yaml.old  pyproject.toml
scripts/: README.md  probe_asl.py  probe_video.py  probe_video_http.py
smoke/: README.md
smoke/fixtures/cosmetics/: README.md
smoke/fixtures/fashion/: README.md
smoke/fixtures/food_label/: README.md
smoke/fixtures/pantry/: README.md
smoke/fixtures/shopping_list/: README.md
smoke/fixtures/unknown/: README.md
specs/: LESSON-1-M0-MODEL-GATEWAY.md  LESSON-1-M3-RESPONSE-ENVELOPE.md  LESSON-1-M4-SPECIALIST-REGISTRY.md  LESSON-1-MEDIA-VIDEO.md  LESSON-1-SMOKE.md  LESSON-1-UI.md
src/shopping_agent/: __init__.py  config.py
src/shopping_agent/api/: app.py  dependencies.py
src/shopping_agent/api/routes/: chat.py  debug.py  events_stream.py  fixtures.py  health.py  sessions.py  ui.py
src/shopping_agent/clients/: cli.py  smoke.py
src/shopping_agent/conversation/: state.py
src/shopping_agent/debug/: __init__.py  trace.py
src/shopping_agent/events/: broadcaster.py  bus.py  schema.py
src/shopping_agent/events/sinks/: jsonl.py
src/shopping_agent/gateway/: base.py  role1_omni.py
src/shopping_agent/static/: app.js  index.html  styles.css
tests/: conftest.py  test_broadcaster.py  test_config.py  test_debug_trace.py  test_events.py  test_role1.py  test_video_intake.py
